fix: :bug: Fix tabs sections
Fix, show content accordin to the tabs selected

--- a/src/components/usual-suspects/MobileSelector.astro
+++ b/src/components/usual-suspects/MobileSelector.astro
@@ -19,16 +19,25 @@ import ChildrenTab from "./tabs/ChildrenTab.astro";
             href="#usual-suspects_tab1"
             role="tab"
             id="tab1"
-            aria-selected="true">Adults</a
+            aria-selected="true"
+            >Adults</a
           >
         </li>
         <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
-          <a href="#usual-suspects_tab2" role="tab" id="tab2" tabindex="-1"
+          <a 
+            href="#usual-suspects_tab2" 
+            role="tab" 
+            id="tab2" 
+            tabindex="-1" 
             >Children/Adolescents</a
           >
         </li>
         <li role="presentation" class="hpp-multisystemic__tabs--nav-item">
-          <a href="#usual-suspects_tab3" role="tab" id="tab3" tabindex="-1"
+          <a 
+            href="#usual-suspects_tab3" 
+            role="tab" 
+            id="tab3" 
+            tabindex="-1"
             >Neonates/Infants</a
           >
         </li>
