--- a/src/pages/usual-suspects.astro
+++ b/src/pages/usual-suspects.astro
@@ -5,6 +5,7 @@ import MobileSelector from "../components/usual-suspects/MobileSelector.astro";
 import InternalNavigation from "../components/InternalNavigation.astro";
 import References from "../components/References.astro";
 import CommonHeroPage from "../components/CommonHeroPage.astro";
+import Sections from "../components/usual-suspects/tabs/Sections.astro";
 
 const internalNavLinks = [
   { href: "common-misdiagnoses", label: "Common Misdiagnoses", active: true },
@@ -65,300 +66,7 @@ const internalNavLinks = [
     class="section usual-suspects-misdiagnosis"
     id="risk-of-wrongful-diagnosis"
   >
-    <div class="wrapper">
-      <h2 class="title">A misdiagnosis can do damage</h2>
-      <p class="pharagraph">
-        Misdiagnosis of a patient with hypophosphatasia is common and can lead
-        to ineffective management that can compound the clinical picture and
-        worsen hypophosphatasia. Certain therapies used for other disorders can
-        interfere with or dramatically worsen hypophosphatasia.<sup
-          >4,5,7,15-17</sup
-        >
-      </p>
-      <div class="red-string-wrapper">
-        <div class="red-string"></div>
-      </div>
-      <p class="pharagraph--secondary">
-        Make sure to <span class="color--saffron-mango"
-          >rule out hypophosphatasia</span
-        > before starting patients on bisphosphonates or some commonly used supplements
-        that may end up causing your patients harm<sup>4,5,7</sup>
-      </p>
-      <div class="red-string-wrapper">
-        <div class="red-string"></div>
-      </div>
-    </div>
-
-    <article class="misdiagnosis-table">
-      <picture class="misdiagnosis-table__asset">
-        <source
-          srcset="/assets/images/usual-suspects/misdiagnosis/misdiagnosis-bg-desktop.png"
-          media="(min-width: 1024px)"
-        />
-        <source
-          srcset="/assets/images/usual-suspects/misdiagnosis/misdiagnosis-bg-tablet.png"
-          media="(min-width: 500px)"
-        />
-        <img
-          src="/assets/images/usual-suspects/misdiagnosis/misdiagnosis-bg-mobile.png"
-          alt=""
-        />
-      </picture>
-      <div class="misdiagnosis-table__content">
-        <div class="content-mobile">
-          <div class="content-mobile__row">
-            <div class="wrapper">
-              <h2 class="content-mobile__title">
-                Treatments for other similar disorders
-              </h2>
-            </div>
-          </div>
-
-          <div class="content-mobile__row">
-            <div class="wrapper">
-              <h3 class="content__title">Bisphosphonates</h3>
-
-              <p class="content__subtitle">Patient populations</p>
-
-              <ul class="misdiagnosis-list">
-                <li>
-                  Bisphosphonates are commonly used in adult patients with
-                  osteoporosis<sup>19</sup>
-                </li>
-              </ul>
-
-              <p class="content__subtitle">
-                Risk of treatment in patients with hypophosphatasia:
-              </p>
-
-              <p class="content__paragraph">
-                <strong
-                  >Based on a study examining bisphophonates in osteoporosis,
-                  the half-life of bisphosphonates was shown to be greater than
-                  10 years and may have detrimental effects on a patient's
-                  condition if a wrongful diagnosis is made. Make sure to rule
-                  out hypophosphatasia before starting patients on
-                  bisphosphonates.<sup>20</sup></strong
-                >
-              </p>
-
-              <ul class="misdiagnosis-list">
-                <li>
-                  The phosphate motifs in bisphosphonates have a similar
-                  conformation to inorganic pyrophosphate (PPi), with the
-                  accumulation of PPi associated with skeletal and systemic
-                  symptoms seen in hypophosphatasia, which may result in a
-                  worsening of presenting symptoms<sup>19,21,22</sup>
-                </li>
-                <li>
-                  Bisphosphonates may directly or indirectly worsen
-                  hypophosphatasia by binding zinc or magnesium, compromising
-                  alkaline phosphatase activity<sup>19,21,22</sup>
-                </li>
-                <li>
-                  Possible increased risk of fracture at growth plate<sup
-                    >19,21,22</sup
-                  >
-                </li>
-                <li>
-                  Increased risk of atypical femoral fractures in adults<sup
-                    >19,21,22</sup
-                  >
-                </li>
-                <li>
-                  Excessively high doses have led to osteopetrosis and
-                  persistent remodeling defects, persisting more than 6 years
-                  after discontinuation<sup>19,21,22</sup>
-                </li>
-              </ul>
-            </div>
-          </div>
-
-          <div class="content-mobile__row">
-            <div class="wrapper">
-              <h3 class="content__title">
-                Supplements:<br />Vitamin D and calcium
-              </h3>
-              <p class="content__subtitle">Patient populations</p>
-
-              <ul class="misdiagnosis-list">
-                <li>
-                  Vitamin D and calcium supplementation can be used for a myriad
-                  of conditions, ranging from rickets to depression, in adults,
-                  children, and infants<sup>118,21,23</sup>
-                </li>
-              </ul>
-
-              <p class="content__subtitle">Patient populations</p>
-
-              <ul class="misdiagnosis-list">
-                <li>
-                  Hypercalcemia<sup>18,21,23</sup>
-                </li>
-                <li>
-                  Hypercalciuria<sup>18,21,23</sup>
-                </li>
-                <li>
-                  Kidney stones<sup>18,21,23</sup>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        <div class="content-desktop">
-          <table class="content-table">
-            <thead>
-              <tr>
-                <th></th>
-                <th colspan="2">Treatments for other similar disorders</th>
-                <th colspan="2">PATIENT POPULATIONS</th>
-                <th colspan="3"
-                  >RISK OF TREATMENT IN PATIENTS WITH HYPOPHOSPHATASIA</th
-                >
-                <th colspan="2"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td></td>
-                <td colspan="2"
-                  ><h3 class="content__title">Bisphosphonates</h3></td
-                >
-                <td colspan="2">
-                  <ul class="misdiagnosis-list">
-                    <li>
-                      Bisphosphonates are commonly used in adult patients with
-                      osteoporosis<sup>19</sup>
-                    </li>
-                  </ul>
-                </td>
-                <td colspan="3">
-                  <p class="content__paragraph">
-                    <strong
-                      >Based on a study examining bisphophonates in
-                      osteoporosis, the half-life of bisphosphonates was shown
-                      to be greater than 10 years and may have detrimental
-                      effects on a patient's condition if a wrongful diagnosis
-                      is made. Make sure to rule out hypophosphatasia before
-                      starting patients on bisphosphonates.<sup>20</sup></strong
-                    >
-                  </p>
-
-                  <ul class="misdiagnosis-list">
-                    <li>
-                      The phosphate motifs in bisphosphonates have a similar
-                      conformation to inorganic pyrophosphate (PPi), with the
-                      accumulation of PPi associated with skeletal and systemic
-                      symptoms seen in hypophosphatasia, which may result in a
-                      worsening of presenting symptoms<sup>19,21,22</sup>
-                    </li>
-                    <li>
-                      Bisphosphonates may directly or indirectly worsen
-                      hypophosphatasia by binding zinc or magnesium,
-                      compromising alkaline phosphatase activity<sup
-                        >19,21,22</sup
-                      >
-                    </li>
-                    <li>
-                      Possible increased risk of fracture at growth plate<sup
-                        >19,21,22</sup
-                      >
-                    </li>
-                    <li>
-                      Increased risk of atypical femoral fractures in adults<sup
-                        >19,21,22</sup
-                      >
-                    </li>
-                    <li>
-                      Excessively high doses have led to osteopetrosis and
-                      persistent remodeling defects, persisting more than 6
-                      years after discontinuation<sup>19,21,22</sup>
-                    </li>
-                  </ul>
-                </td>
-                <td colspan="2"></td>
-              </tr>
-
-              <tr>
-                <td></td>
-                <td colspan="2">
-                  <h3 class="content__title">
-                    Supplements:<br />Vitamin D and calcium
-                  </h3>
-                </td>
-                <td colspan="2">
-                  <ul class="misdiagnosis-list">
-                    <li>
-                      Vitamin D and calcium supplementation can be used for a
-                      myriad of conditions, ranging from rickets to depression,
-                      in adults, children, and infants<sup>7,21,23</sup>
-                    </li>
-                  </ul>
-                </td>
-                <td colspan="3">
-                  <ul class="misdiagnosis-list">
-                    <li>
-                      Hypercalcemia<sup>7,21,23</sup>
-                    </li>
-                    <li>
-                      Hypercalciuria<sup>7,21,23</sup>
-                    </li>
-                    <li>
-                      Kidney stones<sup>7,21,23</sup>
-                    </li>
-                  </ul>
-                </td>
-                <td colspan="2"></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </article>
-
-    <article class="weeding-out">
-      <div class="wrapper">
-        <h2 class="weeding-out__title">WEEDING OUT SUSPECTS</h2>
-      </div>
-      <div class="weeding-out__text">
-        <div class="red-string"></div>
-        <p class="weeding-out__text__paragraph">
-          <span>Persistently low alkaline phosphatase</span> differentiates hypophosphatasia
-          from other conditions<sup>1,9,21,24</sup>
-        </p>
-        <div class="red-string"></div>
-      </div>
-    </article>
-  </section>
-
-  <section class="persistently">
-    <div class="wrapper">
-      <h2 class="persistently__title">
-        Persistently low ALP may differentiate HPP from other conditions<sup
-          >1</sup
-        >
-      </h2>
-      <p class="persistently__text">
-        While some conditions may lead to transient decreases in ALP, patients
-        with HPP have persistently <span class="color--saffron-mango"
-          >low* ALP levels.<sup>†</sup></span
-        > Persistently low ALP levels should raise suspicion of HPP, especially when
-        coupled with common symptoms of HPP such as musculoskeletal pain and/or weakness,
-        premature tooth loss, or previous nontraumatic fractures.<sup>1,3</sup>
-      </p>
-
-      <ul class="persistently__footnote-list">
-        <li>
-          <sup class="symbol-sup positioned">*</sup>Persistently low alkaline
-          phosphatase can be defined as having 2 exams below normal value at
-          intervals of more than 30 days.<sup>3,24</sup>
-        </li>
-        <li>
-          <sup class="symbol-sup positioned">†</sup>Alkaline phosphatase ranges
-          must be age- and sex-adjusted.<sup>3,26</sup>
-        </li>
-      </ul>
-    </div>
+    <Sections />
   </section>
 
   <section class="usual-levels">
