Refactor Cookie Code

--- a/src/components/CookieBanner.astro
+++ b/src/components/CookieBanner.astro
@@ -36,6 +36,7 @@
 
   function hideCookieBanner() {
     cookie.classList.add("hidden");
+    body.style.paddingTop = `0`;
   }
 
   function setCookieConsent() {
