Fix broken link

--- a/src/pages/site-map.astro
+++ b/src/pages/site-map.astro
@@ -12,7 +12,7 @@ import Layout from "../layouts/Layout.astro";
             <a class="sitemap__nav_menu_item_link" href="/">Home</a>
           </li>
           <li class="sitemap__nav_menu_item">
-            <a class="sitemap__nav_menu_item_link" href="/alp-academy/"
+            <a class="sitemap__nav_menu_item_link" href="/alpd-academy/"
               >ALP Academy</a
             >
           </li>
