--- a/src/components/CookieBanner.astro
+++ b/src/components/CookieBanner.astro
@@ -44,13 +44,19 @@
   }
 
   function setOffsetOfBody() {
-    const mediaQuery = window.matchMedia("(min-width: 1024px)");
+    const mediaQuery = window.matchMedia(
+      "(min-width: 1024px) and (max-width: 1100px)"
+    );
+    const maxMediaQuery = window.matchMedia("(min-width: 1100px)");
     if (mediaQuery.matches) {
+      const paddingTop = `${cookie.offsetHeight}px`;
       if (cookie && !cookie.classList.contains("hidden")) {
-        body.style.paddingTop = `${cookie.offsetHeight}px`;
+        body.style.paddingTop = paddingTop;
       }
+    } else if (maxMediaQuery.matches) {
+      body.style.paddingTop = `calc(${cookie.offsetHeight}px - 45px)`;
     } else {
-      body.style.paddingTop = `0`;
+      body.style.paddingTop = ``;
     }
   }
 </script>
