--- a/src/components/Navigation/FooterPrimaryNav.astro
+++ b/src/components/Navigation/FooterPrimaryNav.astro
@@ -4,7 +4,7 @@
       <a class="footer__nav_menu_item_link" href="/">Home</a>
     </li>
     <li class="footer__nav_menu_item">
-      <a class="footer__nav_menu_item_link" href="/alp-academy/">ALP Academy</a>
+      <a class="footer__nav_menu_item_link" href="/alpd-academy/">ALP Academy</a>
     </li>
     <li class="footer__nav_menu_item">
       <a class="footer__nav_menu_item_link" href="/hpp-profile/">HPP Profile</a>
