feat: :construction: Change of classes to adjust items on mobile
Change of classes to adjust items on mobile

--- a/src/pages/hpp-profile.astro
+++ b/src/pages/hpp-profile.astro
@@ -212,7 +212,7 @@ const internalNavLinks = [
 
                   <div class="hpp-multisystemic__study--line"></div>
 
-                  <div class="hpp-multisystemic__study">
+                  <div class="hpp-multisystemic__study hpp-multisystemic__study--bigger">
                     <h2 class="hpp-multisystemic__study--percentage">&gt50%</h2>
                     <p
                       class="hpp-multisystemic__study--text hpp-multisystemic__study--text-red-line"
@@ -230,13 +230,13 @@ const internalNavLinks = [
                 <p
                   class="hpp-multisystemic__condition"
                 >
-                  †Data collected from patients and caregivers via 2 survey instruments (web-based and phone interviews) to evaluate patient-reported symptomatology and burden of disease of hypophosphatasia (N=125). The majority of patients in this study (67%) reported pediatric onset of hypophosphatasia symptoms. Of patients reporting adult-onset hypophosphatasia (27%), 50% (17/34) reported history or surgeries, suggestive of pediatric onset of symptoms.<sup>7</sup>
+                  <sup class="symbol-sup">†</sup>Data collected from patients and caregivers via 2 survey instruments (web-based and phone interviews) to evaluate patient-reported symptomatology and burden of disease of hypophosphatasia (N=125). The majority of patients in this study (67%) reported pediatric onset of hypophosphatasia symptoms. Of patients reporting adult-onset hypophosphatasia (27%), 50% (17/34) reported history or surgeries, suggestive of pediatric onset of symptoms.<sup>7</sup>
                 </p>
 
                 <p
                   class="hpp-multisystemic__condition"
                 >
-                  ‡Data from the Global HPP Registry, an observational, longitudinal, multinational, long-term study of patients ≥18 years with a confirmed diagnosis of hypophosphatasia using physician-entered medical record data from consenting patients (N=304).  Of the 304 adults, 33% (~100 patients) had pediatric-onset HPP.<sup>8</sup>
+                  <sup class="symbol-sup">‡</sup>Data from the Global HPP Registry, an observational, longitudinal, multinational, long-term study of patients ≥18 years with a confirmed diagnosis of hypophosphatasia using physician-entered medical record data from consenting patients (N=304).  Of the 304 adults, 33% (~100 patients) had pediatric-onset HPP.<sup>8</sup>
                 </p>
 
                 <article class="hpp-multisystemic__impact">
@@ -292,7 +292,7 @@ const internalNavLinks = [
                     </div>
 
                     <h3
-                      class="hpp-multisystemic__report--title hpp__profile__subhead"
+                      class="hpp-multisystemic__report--title hpp__profile__subhead hpp__profile__subhead--retrospective-chart"
                     >
                       A retrospective chart review studied the prevalence of common neurologic symptoms associated with hypophosphatasia<sup>9,a,b</sup>
                     </h3>
@@ -311,11 +311,11 @@ const internalNavLinks = [
                       </picture>
                     </div>
 
-                    <p class="hpp-multisystemic__report--content">
-                      <sup>a</sup>Prevalence of neurologic symptoms in adults with hypophosphatasia (N=82) compared with the general US population.<sup>9</sup>
+                    <p class="hpp-multisystemic__report--content hpp-multisystemic__report--content-after-retrospective-chart">
+                      <sup class="symbol-sup">a</sup>Prevalence of neurologic symptoms in adults with hypophosphatasia (N=82) compared with the general US population.<sup>9</sup>
                     </p>
                     <p class="hpp-multisystemic__report--content">
-                      <sup>b</sup>Data taken from a retrospective chart review performed on a series of 82 HPP patients.<sup>9</sup>
+                      <sup class="symbol-sup">b</sup>Data taken from a retrospective chart review performed on a series of 82 HPP patients.<sup>9</sup>
                     </p>
 
                     <h2 class="hpp__profile__title hpp__profile__title--blue">
@@ -499,7 +499,7 @@ const internalNavLinks = [
                   <p
                     class="hpp-patients__red-frame-disclaimer--content color--white text--center"
                   >
-                  Severe HPP occurs in 1:300,000 births and milder HPP has been reported by some sources to occur in up to 1:6,370 births. The overall prevalence of all forms of hypophosphatasia is unknown. It is officially classified as a rare disease. Affected individuals may be unrecognized or misdiagnosed. Globally, HPP affects males and females of all ages and appears to be especially prevalent in people of Caucasian descent.<sup>1,22-24</sup>
+                  Severe HPP occurs in 1:300,000 births and milder HPP has been reported by some sources to occur in up to 1:6,370 births. The overall prevalence of all forms of hypophosphatasia is unknown. It is officially classified as a rare disease.<br> Affected individuals may be unrecognized or misdiagnosed. Globally, HPP affects males and females of all ages and appears to be especially prevalent in people of Caucasian descent.<sup>1,22-24</sup>
                   </p>
                 </div>
 
@@ -574,7 +574,7 @@ const internalNavLinks = [
                     >
                       A study of patients/caregivers of children with hypophosphatasia showed:
                     </h3>
-                    <div class="hpp-multisystemic__study">
+                    <div class="hpp-multisystemic__study hpp-multisystemic__study--bigger">
                       <h2 class="hpp-multisystemic__study--percentage">50%</h2>
                       <p class="hpp-multisystemic__study--text">
                         (15/30) of children had <strong>clinically meaningful impairment</strong> in overall QoL<sup>6</sup>
@@ -588,7 +588,7 @@ const internalNavLinks = [
                       </p>
                     </div>
 
-                    <div class="hpp-multisystemic__study">
+                    <div class="hpp-multisystemic__study hpp-multisystemic__study--bigger">
                       <h2 class="hpp-multisystemic__study--percentage">29%</h2>
                       <p class="hpp-multisystemic__study--text">
                         (7/24) of school-aged children experienced <strong>pain that interfered with daily activities<sup>6†</sup></strong>
@@ -664,17 +664,17 @@ const internalNavLinks = [
                 </p>
 
                 <p
-                  class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions--mt1"
+                  class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions-smaller hpp-multisystemic__report--conditions--mt1"
                 >
                   <sup>a</sup>Excludes patients aged &lt;2 years at enrollment.
                 </p>
 
-                <p class="hpp-multisystemic__report--conditions">
+                <p class="hpp-multisystemic__report--conditions hpp-multisystemic__report--conditions-smaller">
                   <sup>b</sup>Excludes patients aged &lt;6 months at enrollment.
                 </p>
 
                 <div
-                  class="hpp-multisystemic__study hpp-multisystemic__study--full-width"
+                  class="hpp-multisystemic__study hpp-multisystemic__study--bigger"
                 >
                   <h2 class="hpp-multisystemic__study--percentage">~27%</h2>
                   <p class="hpp-multisystemic__study--text">
@@ -866,7 +866,7 @@ const internalNavLinks = [
                 <p
                   class="hpp-patients__red-frame-disclaimer--content color--white text--center"
                 >
-                Severe HPP occurs in 1:300,000 births and milder HPP has been reported by some sources to occur in up to 1:6,370 births. The overall prevalence of all forms of hypophosphatasia is unknown. It is officially classified as a rare disease. Affected individuals may be unrecognized or misdiagnosed. Globally, HPP affects males and females of all ages and appears to be especially prevalent in people of Caucasian descent.<sup>1,8,12,23</sup>
+                Severe HPP occurs in 1:300,000 births and milder HPP has been reported by some sources to occur in up to 1:6,370 births. The overall prevalence of all forms of hypophosphatasia is unknown. It is officially classified as a rare disease. <br>Affected individuals may be unrecognized or misdiagnosed. Globally, HPP affects males and females of all ages and appears to be especially prevalent in people of Caucasian descent.<sup>1,8,12,23</sup>
                 </p>
               </div>
 
@@ -934,7 +934,7 @@ const internalNavLinks = [
                     >
                       A study of patients/caregivers of infants with hypophosphatasia showed:
                     </h3>
-                    <div class="hpp-multisystemic__study">
+                    <div class="hpp-multisystemic__study hpp-multisystemic__study--bigger">
                       <h2 class="hpp-multisystemic__study--percentage">73%</h2>
                       <p class="hpp-multisystemic__study--text">
                         of untreated cases of neonatal and infantile hypophosphatasia were <strong>fatal before the age of 5.</strong>
@@ -943,7 +943,7 @@ const internalNavLinks = [
                         <span class="color--red"><strong>58%</strong></span> of cases were <strong>fatal by 1 year of age<sup>9*</sup></strong>
                       </p>
                     </div>
-                    <div class="hpp-multisystemic__study">
+                    <div class="hpp-multisystemic__study hpp-multisystemic__study--bigger">
                       <h2 class="hpp-multisystemic__study--percentage">64%</h2>
                       <p class="hpp-multisystemic__study--text">
                         <strong>required respiratory support,</strong> most commonly invasive ventilation.
@@ -985,7 +985,7 @@ const internalNavLinks = [
               <p
                 class="hpp-multisystemic__condition"
               >
-                <sup>*</sup>Data from a multinational, noninterventional, retrospective chart review study designed to understand the natural history of 48 patients ≤5 years of age with severe perinatal- and infantile-onset hypophosphatasia.
+                <sup class="symbol-sup">*</sup>Data from a multinational, noninterventional, retrospective chart review study designed to understand the natural history of 48 patients ≤5 years of age with severe perinatal- and infantile-onset hypophosphatasia.
               </p>
 
               <div class="hpp-multisystemic__survival">
